Implementação inicial do login

--- a/MyFinance/appsettings.json
+++ b/MyFinance/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "FinanceApi": {
-    "BaseUrl": "https://api.myfinance.com/"
+    "BaseUrl": "http://localhost:5032/"
   }
 }
